--- a/Editor/LostPerformance.Editor.asmdef
+++ b/Editor/LostPerformance.Editor.asmdef
@@ -4,7 +4,10 @@
     "references": [
         "GUID:8e683a3d6d1f7a74da811ef5727a2526",
         "GUID:9c9eac44720c8e148964962a0bc81f19",
-        "GUID:79e4da52ef2437c48a13a0d9e269b469"
+        "GUID:79e4da52ef2437c48a13a0d9e269b469",
+        "GUID:478a2357cc57436488a56e564b08d223",
+        "GUID:a09b502a3463f794a83cf80a67a246d2",
+        "GUID:77ccaf49895b0d64e87cd4b4faf83c49"
     ],
     "includePlatforms": [
         "Editor"
@@ -15,6 +18,12 @@
     "precompiledReferences": [],
     "autoReferenced": true,
     "defineConstraints": [],
-    "versionDefines": [],
+    "versionDefines": [
+        {
+            "name": "com.whinarn.unitymeshsimplifier",
+            "expression": "0.0.0",
+            "define": "USING_UNITY_MESH_SIMPLIFIER"
+        }
+    ],
     "noEngineReferences": false
 }
