--- a/Runtime/LostPerformance.asmdef
+++ b/Runtime/LostPerformance.asmdef
@@ -12,6 +12,12 @@
     "precompiledReferences": [],
     "autoReferenced": true,
     "defineConstraints": [],
-    "versionDefines": [],
+    "versionDefines": [
+        {
+            "name": "com.whinarn.unitymeshsimplifier",
+            "expression": "0.0.0",
+            "define": "USING_UNITY_MESH_SIMPLIFIER"
+        }
+    ],
     "noEngineReferences": false
 }
